@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1077 2009-10-21 00:24:56 castaglia Exp $
+$Id: NEWS,v 1.1078 2009-10-23 16:28:00 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -13,6 +13,7 @@ CVS
 --------------------------------
 - Bug 3303 - FileZilla reports "Server did not properly shut down TLS
   connection" after TimeoutIdle triggered.
+- Bug 3305 - Emulate Solaris 10 syslog "header" on Solaris 10 servers.
 
 1.3.3rc2 - Released 20-Oct-2009
 --------------------------------
